tests/NormalTests/paczka1/small_fuzzy/79921161.err
Error in line 7: gGcCnN22omy A930 81,6
Error in line 9: gGcCnN22omy S341 82,8
